# pkgsrc

archivers/: Makefile
archivers/7-zip/: Makefile  distinfo
archivers/R-brotli/: Makefile  distinfo
archivers/R-zip/: Makefile  distinfo
archivers/ark/: Makefile
archivers/arqiver/: Makefile  PLIST  distinfo
archivers/bicom/: Makefile
archivers/bkcrack/: Makefile  distinfo
archivers/dar/: Makefile
archivers/engrampa/: Makefile
archivers/fcrackzip/: Makefile
archivers/file-roller/: Makefile
archivers/gnome-autoar/: Makefile  buildlink3.mk
archivers/gzip/: Makefile
archivers/hpack/: Makefile
archivers/hs-hslua-module-zip/: Makefile  buildlink3.mk  distinfo
archivers/hs-tar/: Makefile  PLIST  buildlink3.mk  distinfo
archivers/hs-tar-conduit/: DESCR  Makefile  PLIST  buildlink3.mk  distinfo
archivers/hs-zip-archive/: Makefile  buildlink3.mk
archivers/hs-zlib/: Makefile  buildlink3.mk
archivers/innoextract/: Makefile  distinfo
archivers/karchive/: Makefile  buildlink3.mk
archivers/kf6-karchive/: Makefile  PLIST  buildlink3.mk  distinfo
archivers/lha/: Makefile
archivers/libcomprex/: Makefile  buildlink3.mk
archivers/libzip/: Makefile  PLIST  buildlink3.mk  distinfo
archivers/lxqt-archiver/: Makefile  PLIST  distinfo
archivers/minizip-ng/: Makefile  distinfo
archivers/p5-Archive-Any/: Makefile
archivers/p5-Archive-Any-Lite/: Makefile
archivers/p5-Archive-Extract/: Makefile
archivers/p5-Archive-Peek/: Makefile
archivers/p5-Archive-Tar-Wrapper/: Makefile
archivers/p5-Archive-Zip/: Makefile
archivers/p5-Compress-Bzip2/: Makefile
archivers/p5-Compress-LZMA-Simple/: Makefile
archivers/php-bz2/: Makefile
archivers/php-pecl-zip/: Makefile
archivers/php-zip/: Makefile
archivers/php-zlib/: Makefile
archivers/pixz/: Makefile
archivers/pxz/: Makefile
archivers/py-brotli/: Makefile
archivers/py-cramjam/: Makefile
archivers/py-libarchive-c/: Makefile
archivers/py-lz4/: Makefile  distinfo
archivers/py-rarfile/: Makefile
archivers/py-unrardll/: Makefile
archivers/py-zipp/: Makefile  PLIST  distinfo
archivers/py-zipstream-ng/: Makefile
archivers/py-zopfli/: Makefile
archivers/py-zstandard/: Makefile
archivers/quazip/: Makefile  buildlink3.mk
archivers/szip/: Makefile
archivers/unace/: Makefile
archivers/unace-bin/: Makefile
archivers/unarchiver/: Makefile
archivers/unarj/: Makefile
archivers/undms/: Makefile
archivers/unlzx/: Makefile
archivers/unrar/: Makefile.common  distinfo
archivers/unzip/: Makefile
archivers/upx/: Makefile
archivers/xarchiver/: Makefile
archivers/xbin/: Makefile
archivers/xfce4-thunar-archive/: Makefile
archivers/xmill/: Makefile
archivers/xz/: Makefile  distinfo
audio/: Makefile
audio/aeneas/: Makefile
benchmarks/: Makefile
biology/: Makefile
cad/: Makefile
converters/: Makefile
cross/: Makefile
databases/: Makefile
devel/: Makefile
doc/: CHANGES-2024  CHANGES-2025  NEWS  TODO  eol-packages  pkg-vulnerabilities  pkgsrc.html  pkgsrc.txt
editors/: Makefile
emulators/: Makefile
fonts/: Makefile
games/: Makefile
geography/: Makefile
graphics/: Makefile
inputmethod/: Makefile
inputmethod/mozc-server/patches/: patch-WORKSPACE.bazel  patch-dictionary_BUILD.bazel
lang/: Makefile
lang/ghc910/patches/: patch-compiler_GHC_SysTools_Process.hs  patch-compiler_ghc.cabal.in  patch-configure.ac  patch-hadrian_bindist_Makefile  patch-hadrian_bootstrap_bootstrap.py  patch-hadrian_bootstrap_src_Main.hs  patch-hadrian_src_Builder.hs  patch-hadrian_src_Hadrian_Haskell_Cabal_Parse.hs  patch-hadrian_src_Rules_BinaryDist.hs  patch-hadrian_src_Rules_Documentation.hs  patch-hadrian_src_Settings_Builders_Cabal.hs  patch-hadrian_src_Settings_Builders_Ghc.hs  patch-hadrian_src_Settings_Packages.hs  patch-libraries_Cabal_Cabal-syntax_Cabal-syntax.cabal  patch-libraries_Cabal_Cabal_src_Distribution_Simple_GHC.hs  patch-libraries_Cabal_Cabal_src_Distribution_Simple_GHC_Build_Link.hs  patch-libraries_Cabal_Cabal_src_Distribution_Simple_Register.hs  patch-libraries_base_src_System_CPUTime_Posix_Times.hsc  patch-libraries_ghc-internal_configure.ac  patch-libraries_ghc-internal_src_GHC_Internal_Event_KQueue.hsc  patch-libraries_ghc-internal_src_GHC_Internal_System_Environment.hs  patch-libraries_ghc-internal_src_GHC_Internal_System_Environment_Blank.hsc  patch-libraries_terminfo_configure.ac  patch-libraries_text_cbits_measure__off.c  patch-libraries_time_lib_Data_Time_Clock_Internal_CTimespec.hsc  patch-libraries_time_lib_Data_Time_Clock_Internal_CTimeval.hs  patch-libraries_unix_System_Posix_Env.hsc  patch-libraries_unix_System_Posix_Env_ByteString.hsc  patch-libraries_unix_System_Posix_Env_PosixString.hsc  patch-libraries_unix_System_Posix_Signals.hsc  patch-libraries_unix_System_Posix_User.hsc  patch-libraries_unix_System_Posix_User_ByteString.hsc  patch-m4_fptools__set__haskell__platform__vars.m4  patch-rts_rts.cabal  patch-utils_ghc-toolchain_src_GHC_Toolchain_Program.hs  patch-utils_haddock_driver_Main.hs  patch-utils_haddock_haddock.cabal
lang/ghc98/patches/: patch-distrib_configure.ac.in  patch-hadrian_bootstrap_bootstrap.py  patch-hadrian_hadrian.cabal  patch-hadrian_src_Settings_Builders_Cabal.hs  patch-hadrian_src_Settings_Packages.hs  patch-libraries_text_cbits_measure__off.c  patch-linters_lint-commit-msg_lint-commit-msg.cabal  patch-linters_lint-submodule-refs_lint-submodule-refs.cabal  patch-linters_lint-whitespace_lint-whitespace.cabal  patch-linters_linters-common_linters-common.cabal  patch-m4_fp__find__cxx__std__lib.m4
licenses/: esdl-license
mail/: Makefile
math/: Makefile
meta-pkgs/: Makefile
misc/: Makefile
mk/: bsd.pkg.barrier.mk  bsd.pkg.debug.mk  bsd.pkg.mk  compiler.mk  curses.builtin.mk  haskell.mk  license.mk  mysql.buildlink3.mk  pgsql.buildlink3.mk  ssl.mk  ssldir.mk
net/: Makefile
print/: Makefile
security/: Makefile
shells/: Makefile
sysutils/: Makefile
sysutils/git-annex/patches/: patch-git-annex.cabal
textproc/: Makefile
time/: Makefile
wm/: Makefile
www/: Makefile
x11/: Makefile
(+14988 files in other folders)
